--- a/ask-website/package.json
+++ b/ask-website/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/theme": "^2.2.11",
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-aria/ssr": "^3.9.6",
     "@react-stately/utils": "^3.10.4",
     "@upstash/rag-chat": "^2.0.1",
